Fix TypeScript compilation errors and improve Vercel config
- Fixed unused imports and variables in React components
- Corrected TypeScript type definitions for suggestions array
- Updated Vercel configuration to use @vercel/static-build
- Removed invalid @tailwindcss/vite import from vite.config.ts
- Build now compiles successfully with all TypeScript errors resolved

--- a/package.json
+++ b/package.json
@@ -2,12 +2,5 @@
   "name": "forza-products-management-system",
   "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "build": "cd forza-products-frontend && npm install && npm run build",
-    "dev": "cd forza-products-frontend && npm run dev",
-    "start": "cd forza-products-frontend && npm run preview"
-  },
-  "workspaces": [
-    "forza-products-frontend"
-  ]
+  "description": "Forza Products Management System with React frontend and Flask backend"
 }
