--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,17 @@
 {
-  "buildCommand": "cd forza-products-frontend && npm install && npm run build",
-  "outputDirectory": "forza-products-frontend/dist",
-  "installCommand": "cd forza-products-frontend && npm install"
+  "builds": [
+    {
+      "src": "forza-products-frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ]
 }
