--- a/forza-products-new-frontend/tsconfig.json
+++ b/forza-products-new-frontend/tsconfig.json
@@ -20,6 +20,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
+    /* Performance */
+    "incremental": true,
+    "tsBuildInfoFile": ".tsbuildinfo",
+
     /* Path mapping */
     "baseUrl": ".",
     "paths": {
