Fix Vercel deployment: Update config to use forza-products-new-frontend and ignore unused directories

--- a/.vercelignore
+++ b/.vercelignore
@@ -4,6 +4,7 @@ node_modules/
 
 # Build outputs (except the target one)
 forza-products-frontend/
+forza-products-frontend3/
 app.py
 requirements.txt
 product-images/
